# logger-lib

./: .gitignore  README.md  log.txt  pyproject.toml  senerios.txt  setup.py  testing.txt
logger/: __init__.py  logConstants.py  logLevelEnum.py  logger.py  loggerDecorator.py  loggerException.py  loggerMessageDecorators.py  writeLogMessage.py
logger/examples/: example1.py  example2.py  example3.py  example4.py  example5.py  example6.py  example7.py
logger/src/: __init__.py  logConstants.py  logger.py  loggerDecorator.py  loggerException.py  loggerMessageDecorators.py
logger/test/: test_logger.py  test_loggerDecorator.py  test_loggerMessageDecorators.py  test_writeLogMessage.py
logger_lib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
